--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.16",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
     "next": "15.5.0",
